# Note_manager

./: .env  README.md  auth.py  celery_app.py  celerybeat-schedule  database.py  main.py  models.py  pyproject.toml  schemas.py  tasks.py
app/: database.py  logger.py  main.py  models.py  schemas.py
app/celery/: celery__app.py  tasks.py
app/core/: config.py
app/routers/: notes.py  user.py  weather.py
